<resources>
    <!--<string name="app_name">SavingFood</string>-->
    <string name="intro1_title">Saving Foods</string>
    <string name="intro1">A melhor forma de aproveitar os produtos com promoções incríveis.</string>
    <string name="distance">0.0 km</string>
    <string name="quantity_detail">0 itens. Vencimento 20/03/17</string>
    <string name="quantity">Restam 0 itens</string>
    <string name="views">0 visualização</string>
    <string name="price_from">R$ 0.00</string>
    <string name="price_to">para R$ 0.00</string>
    <string name="desc_product_test">teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste</string>
    <string name="description">Descrição</string>
    <string name="login_email">Digite seu email</string>
    <string name="pass_login">Digite sua senha</string>
    <string name="find_product">Qual produto estaria procurando?</string>
    <string name="no_product">Desculpe, não encontramos nenhum produto.</string>
    <string name="see_others_products">Ver os outros produtos</string>

    <!-- Mensagens Wizard -->
    <string name="texto_explicativo">Queremos te conhecer um pouco melhor. Iremos fazer duas perguntas.</string>
    <string name="texto_agradecimento_wizard">Obrigado pelas respostas. Estamos prontos para começar.</string>
    <string name="txt_botao_proximo">Próximo</string>
    <string name="txt_botao_anterior">Voltar</string>
    <string name="txt_botao_fim_questionario">OK</string>
    <string name="txt_botao_revisao_informacoes">Acabou!</string>
    <string name="msg_fim_questionario">Acabou!</string>
    <string name="titulo_acabou_wizard">Acabou!</string>

    <string name="facebook_app_id">1927600960895672</string>

</resources>

