<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="2dp">

              <TextView
                  android:id="@+id/register_date"
                  android:layout_width="0dp"
                  android:layout_weight="1.5"
                  android:layout_height="wrap_content"
                  android:textSize="10dp"
                  android:text="14/03/17 o cadastro foi feito."
                  android:gravity="start"
                  android:textColor="@android:color/darker_gray"
                  />

              <TextView
                  android:id="@+id/days_left"
                  android:layout_width="0dp"
                  android:layout_weight="0.5"
                  android:layout_height="wrap_content"
                  android:textSize="14dp"
                  android:text="999 dias"
                  android:padding="2dp"
                  android:gravity="center"
                  android:background="@color/colorPrimary"
                  android:textColor="@android:color/white" />

           </LinearLayout>

          <!--<TextView-->
              <!--android:id="@+id/name"-->
              <!--android:layout_width="match_parent"-->
              <!--android:layout_height="wrap_content"-->
              <!--android:textSize="20sp"-->
              <!--android:text="Cerveja Skol 18 latinhas"-->
              <!--android:gravity="start"-->
              <!--android:textColor="@android:color/black"-->
              <!--android:padding="2dp"/>-->

          <TextView
              android:id="@+id/quantity"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/quantity_detail"
              android:gravity="left|center"
              android:textSize="14sp"
              android:maxLines="2"
              android:padding="2dp"
              fontPath="fonts/Nexa-Bold.ttf"
              tools:ignore="MissingPrefix"
              android:textColor="@android:color/holo_red_light"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:padding="2dp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="De "
                  android:gravity="left|center"
                  android:textSize="14sp"
                  fontPath="fonts/Nexa-Bold.ttf"
                  tools:ignore="MissingPrefix"
                  android:textColor="@color/colorPrimary"/>

              <br.com.savingfood.utils.CustomTextView
                  android:id="@+id/price_from"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/price_from"
                  android:gravity="left|center"
                  android:textSize="14sp"
                  fontPath="fonts/Nexa-Bold.ttf"
                  tools:ignore="MissingPrefix"
                  android:textColor="@color/colorPrimary"/>


              <TextView
                  android:layout_marginLeft="5dp"
                  android:id="@+id/price_to"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/price_to"
                  android:gravity="left|center"
                  android:textSize="14sp"
                  fontPath="fonts/Nexa-Bold.ttf"
                  tools:ignore="MissingPrefix"
                  android:textColor="@color/colorPrimary"/>

          </LinearLayout>

       <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorPrimaryDark">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/description"
              android:textSize="14sp"
              android:padding="8dp"
              android:textColor="@color/white"
              android:layout_marginLeft="10dp"
              fontPath="fonts/Nexa-Bold.ttf"
              tools:ignore="MissingPrefix"/>

          </LinearLayout>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="@string/desc_product_test"
              android:textSize="14sp"
              android:padding="8dp"
              android:id="@+id/description"/>

      </LinearLayout>

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
