<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/relative_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/img"
            android:src="@drawable/no_img_product"
            tools:ignore="ContentDescription"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/discount"
            android:src="@drawable/discount"
            tools:ignore="ContentDescription"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/percent"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:textSize="10sp"
            android:text="30%"
            android:gravity="center"
            android:textColor="@android:color/white"/>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:indeterminateTint="@color/colorPrimary"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Cerveja Skol 18 latinhas"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="De "
                    android:gravity="left|center"
                    android:textSize="14sp"
                    fontPath="fonts/Nexa-Bold.ttf"
                    tools:ignore="MissingPrefix"
                    android:textColor="@color/colorPrimary"/>

                <br.com.savingfood.utils.CustomTextView
                    android:id="@+id/price_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_from"
                    android:gravity="left|center"
                    android:textSize="14sp"
                    fontPath="fonts/Nexa-Bold.ttf"
                    tools:ignore="MissingPrefix"
                    android:textColor="@color/colorPrimary"/>


                <TextView
                    android:layout_marginLeft="5dp"
                    android:id="@+id/price_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_to"
                    android:gravity="left|center"
                    android:textSize="14sp"
                    fontPath="fonts/Nexa-Bold.ttf"
                    tools:ignore="MissingPrefix"
                    android:textColor="@color/colorPrimary"/>

             </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!--<TextView-->
                    <!--android:id="@+id/quantity"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/quantity"-->
                    <!--android:gravity="left|center"-->
                    <!--android:textSize="14sp"-->
                    <!--fontPath="fonts/Nexa-Bold.ttf"-->
                    <!--tools:ignore="MissingPrefix"-->
                    <!--android:textColor="@android:color/holo_red_light"/>-->

                <TextView
                    android:id="@+id/views"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/views"
                    android:gravity="right|center"
                    android:textSize="14sp"
                    fontPath="fonts/Nexa-Bold.ttf"
                    tools:ignore="MissingPrefix"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>

      </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:cacheColorHint="@android:color/transparent"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"/>

</LinearLayout>
